[gd_scene load_steps=9 format=3 uid="uid://y46vex5hofai"]

[ext_resource type="Script" path="res://scripts/load_app.gd" id="1_syain"]
[ext_resource type="Texture2D" uid="uid://dc6qar2pe3urh" path="res://panoramas/IMG_8867.jpeg" id="2_7dhqm"]
[ext_resource type="Script" path="res://scripts/camera_3d.gd" id="3_2l4g3"]
[ext_resource type="Script" path="res://scripts/constelations.gd" id="4_5odx2"]
[ext_resource type="PackedScene" uid="uid://bnss1urf5ebkf" path="res://scenes/ui.tscn" id="5_qxgpc"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_mxq5t"]
panorama = ExtResource("2_7dhqm")

[sub_resource type="Sky" id="Sky_yqw8t"]
sky_material = SubResource("PanoramaSkyMaterial_mxq5t")

[sub_resource type="Environment" id="Environment_7ph6w"]
background_mode = 1
sky = SubResource("Sky_yqw8t")
glow_enabled = true

[node name="Node3D" type="Node3D"]
script = ExtResource("1_syain")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_7ph6w")

[node name="Camera3D" type="Camera3D" parent="WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("3_2l4g3")

[node name="Node" type="Node" parent="."]

[node name="Constelations" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("4_5odx2")
camera = NodePath("../WorldEnvironment/Camera3D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("5_qxgpc")]

[connection signal="exoplanet_data_loaded" from="." to="." method="_on_exoplanet_data_loaded"]
[connection signal="star_data_loaded" from="." to="." method="_on_star_data_loaded"]
